@@ -52,7 +52,6 @@ Build-Depends: aspell,
                libtest-synopsis-perl,
                libtext-levenshtein-perl,
                libtext-template-perl,
-               libtie-ixhash-perl,
                libtimedate-perl,
                liburi-perl,
                libyaml-libyaml-perl,
@@ -98,7 +97,6 @@ Depends: binutils,
          liblist-moreutils-perl,
          libparse-debianchangelog-perl,
          libtext-levenshtein-perl,
-         libtie-ixhash-perl,
          libtimedate-perl,
          liburi-perl,
          libyaml-libyaml-perl,
