@@ -117,6 +117,9 @@ lintian (2.5.53) UNRELEASED; urgency=medium
   * lib/Lintian/Check.pm:
     + [CL] Stop emitting {maintainer,uploader}-address-causes-mail-loops
       for @packages.debian.org addresses.  (Closes: #871575)
+  * lib/Lintian/Data.pm:
+    + [CL] Modify Lintian::Data's "all" to always return keys in insertion
+      order, dropping dependency on libtie-ixhash-perl.
 
   * helpers/coll/objdump-info-helper:
     + [CL] Apply patch from Steve Langasek to accomodate binutils 2.29
